fix(treeview): hide scrollbars during a node expansion

--- a/packages/default/scss/treeview/_layout.scss
+++ b/packages/default/scss/treeview/_layout.scss
@@ -19,6 +19,7 @@
             background: none;
             list-style: none;
             position: relative;
+            overflow: hidden;
         }
 
         // Wrappers
